k8s/apps/technitium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium
  labels:
    app: technitium
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: technitium
  template:
    metadata:
      labels:
        app: technitium
    spec:
      nodeSelector:
      securityContext:
        sysctls:
          - name: net.ipv4.ip_local_port_range
            value: "1024 65535"
      containers:
        - name: technitium
          image: technitium/dns-server:15.5.0@sha256:2502fd4993d18a8c6665ce6eefb20c76ca21918c5435a015d9485b36e8275b5e
          ports:
            - name: dns-udp
              containerPort: 53
              hostPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              hostPort: 53
              protocol: TCP
            - name: webui
              containerPort: 5380
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          resources:
            requests:
              memory: 320Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /etc/dns
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: technitium-config
---
apiVersion: v1
kind: Service
metadata:
  name: technitium
spec:
  selector:
    app: technitium
  ports:
    - port: 5380
      targetPort: 5380
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium
spec:
  ingressClassName: traefik
  rules:
    - host: technitium.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technitium
                port:
                  number: 5380
